[metadata]
name = toproxypdf
version = 0.0.4
author = Matthew Lam
author_email = lcpmatthew@gmail.com
description = converts proxy images into pdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feimaomiao/toproxypdf
project_urls =
    Bug Tracker = https://github.com/feimaomiao/toproxypdf/issues
keyword = 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = toproxypdf
python_requires = >=3.6
install_requires = 
    colorama>=0.4.4
    Pillow>=9.1.1
    tqdm>=4.64.0

[options.entry_points]
console-scripts = toproxypdf = toproxypdf:main
